[package]
name = "v"
version = "0.0.1"
authors = ["Edwin Sarver <edwin.l.sarver@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.26.0", features = ["all-widgets", "macros"] }
thiserror = "1.0.56"
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.0", features = ["derive", "string", "wrap_help"] }

[lints.clippy]
module-name-repetitions = {level = "allow"}

